Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,7 +2,7 @@ trigger:
 - master
 
 pool:
-  vmImage: 'windows-latest'  # Because App Service is on Windows
+  vmImage: 'ubuntu-latest'  # Because App Service is on Linux
 
 variables:
   appName: 'church-website'
